--- a/App/nbproject/private/private.properties
+++ b/App/nbproject/private/private.properties
@@ -1,9 +1,9 @@
 compile.on.save=false
 do.depend=false
 do.jar=true
-file.reference.ansir_tristate.jar=..\\Common\\lib\\ansir_tristate.jar
-file.reference.AppleJavaExtensions.jar=..\\Common\\lib\\AppleJavaExtensions.jar
-file.reference.commons-net-2.2.jar=..\\Common\\lib\\commons-net-2.2.jar
+file.reference.ansir_tristate.jar=..\\..\\happiness\\lib\\ansir_tristate.jar
+file.reference.AppleJavaExtensions.jar=..\\..\\happiness\\lib\\AppleJavaExtensions.jar
+file.reference.commons-net-2.2.jar=..\\..\\happiness\\lib\\commons-net-2.2.jar
 javac.debug=true
 javadoc.preview=true
 user.properties.file=C:\\Users\\adlaird\\AppData\\Roaming\\NetBeans\\7.2\\build.properties
