--- a/App/nbproject/project.properties
+++ b/App/nbproject/project.properties
@@ -57,10 +57,10 @@ dist.jar=${dist.dir}/GetOrganized.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.ansir_tristate.jar=lib/ansir_tristate.jar
-file.reference.AppleJavaExtensions.jar=lib/AppleJavaExtensions.jar
-file.reference.commons-net-2.2.jar=lib/commons-net-2.2.jar
-file.reference.JCalendar_GO.jar=../Common/lib/JCalendar_GO.jar
+file.reference.ansir_tristate.jar=../../happiness/lib/ansir_tristate.jar
+file.reference.AppleJavaExtensions.jar=../../happiness/lib/AppleJavaExtensions.jar
+file.reference.commons-net-2.2.jar=../../happiness/lib/commons-net-2.2.jar
+file.reference.JCalendar_GO.jar=../lib/JCalendar_GO.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
