--- a/Updater/nbproject/project.properties
+++ b/Updater/nbproject/project.properties
@@ -55,8 +55,8 @@ dist.jar=${dist.dir}/GetOrganizedUpdater.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.AppleJavaExtensions.jar=lib/AppleJavaExtensions.jar
-file.reference.swing-layout-1.0.4.jar=lib/swing-layout-1.0.4.jar
+file.reference.AppleJavaExtensions.jar=../../happiness/lib/AppleJavaExtensions.jar
+file.reference.swing-layout-1.0.4.jar=../../happiness/lib/swing-layout-1.0.4.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
