Updating references of alexlaird.name to alexlaird.com.

--- a/Updater/nbproject/project.properties
+++ b/Updater/nbproject/project.properties
@@ -4,7 +4,7 @@ annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.desc=Updater used in checking for and downloading updates for Get Organized.
-application.homepage=http://alexlaird.name
+application.homepage=http://alexlaird.com
 application.title=Get Organized Updater
 application.vendor=JTK Solutions
 auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.expand-tabs=true
