Removing .idea and fixing NetBeans project files.

--- a/App/nbproject/private/private.properties
+++ b/App/nbproject/private/private.properties
@@ -6,4 +6,4 @@ file.reference.AppleJavaExtensions.jar=..\\..\\happiness\\lib\\AppleJavaExtensio
 file.reference.commons-net-2.2.jar=..\\..\\happiness\\lib\\commons-net-2.2.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\adlaird\\AppData\\Roaming\\NetBeans\\7.2\\build.properties
+user.properties.file=C:\\Users\\alexlaird\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
