--- a/App/build.xml
+++ b/App/build.xml
@@ -7,7 +7,7 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Psroject Properties dialog box.-->
-<project name="GetOrganized" basedir=".">
+<project name="GetOrganized" default="default" basedir=".">
     <description>Builds, tests, and runs the project GetOrganized.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
@@ -93,7 +93,7 @@
     </condition>
 
     <!-- Settings -->
-    <property name="store.dir" value="build/artifacts" />
+    <property name="store.dir" value="store" />
 
     <property name="launch4j.dir" value="${basedir}/../../happiness/tools/Launch4j" />
     <condition property="python.exe" value="${basedir}/../../happiness/tools/Python/App/python.exe" else="python">
@@ -105,6 +105,37 @@
     <taskdef name="launch4j"
         classname="net.sf.launch4j.ant.Launch4jTask"
         classpath="${launch4j.dir}/launch4j.jar:${launch4j.dir}/lib/xstream.jar" />
+
+    <target name="package-for-store" depends="verify-bundles,clean,jar">
+        
+        <property name="store.jar.name" value="Get Organized" />
+
+        <!-- don't edit below this line -->
+        <property name="store.jar" value="${store.dir}/${store.jar.name}.jar"/>
+
+        <echo message="Packaging ${application.title} into a single JAR at ${store.jar}"/>
+
+        <delete dir="${store.dir}"/>
+        <mkdir dir="${store.dir}"/>
+
+        <jar destfile="${store.dir}/temp_final.jar" filesetmanifest="skip">
+            <zipgroupfileset dir="dist" includes="*.jar" />
+            <zipgroupfileset dir="dist/lib" includes="*.jar" />
+
+            <manifest>
+                <attribute name="Main-Class" value="${main.class}" />
+            </manifest>
+        </jar>
+
+        <zip destfile="${store.jar}">
+            <zipfileset src="${store.dir}/temp_final.jar"
+            excludes="META-INF/*.SF, META-INF/*.DSA, META-INF/*.RSA" />
+        </zip>
+
+        <antcall target="launch4jtarget" />
+
+        <delete file="${store.dir}/temp_final.jar" />
+    </target>
 
     <target name="verify-bundles">
         <exec executable="${python.exe}" dir="." failonerror="true">
@@ -118,7 +149,7 @@
         <launch4j configFile="installer/launcher.xml" />
     </target>
 
-    <target name="create-installer">
+    <target name="create-installer" depends="package-for-store">
         <!-- Validate and update all version numbers -->
         <exec executable="${python.exe}" dir=".">
             <arg value="scripts/ValidateVersion.py" />
