--- a/JCalendar_GO/nbproject/private/private.properties
+++ b/JCalendar_GO/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Documents and Settings\\Ali\\.netbeans\\7.0\\build.properties
+user.properties.file=C:\\Users\\alexlaird\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
