--- a/Updater/nbproject/private/private.properties
+++ b/Updater/nbproject/private/private.properties
@@ -5,4 +5,4 @@ file.reference.AppleJavaExtensions.jar=..\\..\\happiness\\lib\\AppleJavaExtensio
 file.reference.swing-layout-1.0.4.jar=..\\..\\happiness\\lib\\swing-layout-1.0.4.jar
 javac.debug=false
 javadoc.preview=true
-user.properties.file=C:\\Users\\adlaird\\AppData\\Roaming\\NetBeans\\7.2\\build.properties
+user.properties.file=C:\\Users\\alexlaird\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
