--- a/Updater/nbproject/project.properties
+++ b/Updater/nbproject/project.properties
@@ -69,8 +69,8 @@ javac.compilerargs=
 javac.deprecation=true
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.6
-javac.target=1.6
+javac.source=1.7
+javac.target=1.7
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -100,7 +100,7 @@ main.class=GetOrganizedUpdater
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_1.7
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
